--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <button type="submit">Search</button>
       </form>
       <div class="loader-container hidden">
-        <div class="loader"></div>
+        <span class="loader"></span>
       </div>
       <ul class="gallery"></ul>
     </main>
